prost-unwrap-proto-tests/tests/ui/with_original_mod_non_absolute.stderr
error: Parameter argument must be an absolute module path literal, e.g. `crate::proto`
  --> tests/ui/with_original_mod_non_absolute.rs:10:24
   |
10 |     .with_original_mod(original)
   |                        ^^^^^^^^
